...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/lets_quiz_flags"
        android:textColor="@color/primaryColourText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvFlagCompletion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flagCV"
        app:layout_constraintTop_toTopOf="@+id/flagCV"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/lets_quiz_capitals"
        android:textColor="@color/primaryColourText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvCapitalCompletion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/capitalCV"
        app:layout_constraintTop_toTopOf="@+id/capitalCV" />

    <TextView
        android:id="@+id/tvCapital"
...
        android:text="@string/Landmarks"
        android:textAlignment="center"
        android:textColor="@color/primaryColourText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dividerLandmark"
        app:layout_constraintEnd_toStartOf="@+id/tvLandmarkCompletion"
        app:layout_constraintStart_toEndOf="@+id/landmarkCV"
        app:layout_constraintTop_toBottomOf="@id/landmarkBtn"/>

    <TextView
        android:id="@+id/tvLandmarkCompletion"
        android:layout_width="wrap_content"
...
        android:text="@string/Food"
        android:textAlignment="center"
        android:textColor="@color/primaryColourText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dividerFood"
        app:layout_constraintEnd_toStartOf="@+id/tvFoodCompletion"
        app:layout_constraintStart_toEndOf="@+id/foodCV"
        app:layout_constraintTop_toBottomOf="@id/foodBtn"/>

    <TextView
        android:id="@+id/tvFoodCompletion"
        android:layout_width="wrap_content"
...
        android:text="@string/Sports"
        android:textAlignment="center"
        android:textColor="@color/primaryColourText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/dividerSports"
        app:layout_constraintEnd_toStartOf="@+id/tvSportsCompletion"
        app:layout_constraintStart_toEndOf="@+id/sportsCV"
        app:layout_constraintTop_toBottomOf="@id/sportsBtn"/>

    <TextView
        android:id="@+id/tvSportsCompletion"
        android:layout_width="wrap_content"
...
        android:text="@string/Brands"
        android:textAlignment="center"
        android:textColor="@color/primaryColourText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvBrandCompletion"
        app:layout_constraintStart_toEndOf="@+id/brandCV"
        app:layout_constraintTop_toBottomOf="@id/brandBtn"/>

    <TextView
        android:id="@+id/tvBrandCompletion"
        android:layout_width="wrap_content"
...
