<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp"
        app:srcCompat="@drawable/title_design"
        tools:ignore="ImageContrastCheck" />


    <RadioButton
        android:id="@+id/rbTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="52dp"
        android:buttonTint="@color/accentDark"
        android:checked="true"
        android:fontFamily="@font/roboto"
        android:maxWidth="310dp"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textColor="@color/primaryColourText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/loginUsername"
        app:layout_constraintEnd_toEndOf="@id/loginUsername"
        app:layout_constraintStart_toStartOf="@id/loginUsername"
        app:layout_constraintTop_toBottomOf="@id/ivTitle" />

    <RadioButton
        android:id="@+id/rbTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="52dp"
        android:buttonTint="@color/accentDark"
        android:fontFamily="@font/roboto"
        android:maxWidth="310dp"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/primaryColourText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signupUsername"
        app:layout_constraintEnd_toEndOf="@id/signupUsername"
        app:layout_constraintStart_toStartOf="@id/signupUsername"
        app:layout_constraintTop_toBottomOf="@id/ivTitle" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="your username"
        android:height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:background="#ffffff"
        android:enabled="true"
        android:hint="@string/enter_your_username"
        android:elevation="8dp"
        android:padding="8dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signupUsername"
        app:layout_constraintTop_toBottomOf="@id/rbTitle1"
        app:layout_constraintBottom_toTopOf="@id/loginPassword"/>

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="your username"
        android:height="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:background="#ffffff"
        android:enabled="false"
        android:elevation="8dp"
        android:hint="@string/choose_a_username"
        android:padding="8dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/loginUsername"
        app:layout_constraintTop_toBottomOf="@id/rbTitle2"
        app:layout_constraintBottom_toTopOf="@id/signupPassword"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="your password"
        android:height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="5dp"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:hint="@string/enter_your_password"
        android:background="#ffffff"
        android:enabled="true"
        android:elevation="8dp"
        android:padding="8dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        app:layout_constraintBottom_toTopOf="@id/enterBtn"
        app:layout_constraintTop_toBottomOf="@id/loginUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signupPassword"/>

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="your password"
        android:height="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:fontFamily="@font/roboto"
        android:hint="@string/choose_your_password"
        android:background="#ffffff"
        android:enabled="false"
        android:elevation="8dp"
        android:padding="8dp"
        tools:ignore="TextFields,VisualLintTextFieldSize"
        app:layout_constraintBottom_toTopOf="@id/joinBtn"
        app:layout_constraintTop_toBottomOf="@id/signupUsername"
        app:layout_constraintStart_toEndOf="@id/loginPassword"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:contentDescription="@string/title_login_button_description"
        android:enabled="true"
        android:onClick="startClick"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/loginPassword"
        app:layout_constraintStart_toStartOf="@id/loginPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <Button
        android:id="@+id/joinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:contentDescription="@string/title_signup_button_description"
        android:enabled="false"
        android:text="@string/join"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/signupPassword"
        app:layout_constraintStart_toStartOf="@id/signupPassword"
        app:layout_constraintTop_toBottomOf="@+id/signupPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>